# cost-utility-calculator

./: .gitignore  1.3  LICENSE  README.md  app.py  main.fdb_latexmk  main.fls  main2.aux  main2.fdb_latexmk  main2.out  main2.xdv  pyproject.toml  requirements-dev.txt  requirements.txt  sim.py
.github/workflows/: ci.yml
cost-util-venv/: pyvenv.cfg
cost-util-venv/Scripts/: activate  activate.bat
data/: curves.json  curves_dragut_phone.csv  resources.json  unit_conversions.csv
data/raw/dragut/: gpu.csv  labels.csv  toy_dragut_summary.csv
docs/: lit_candidates.csv  lit_candidates.md  lit_stats.json  lit_stats_explanation.md  literature_matrix.csv  meeting-notes.md  project_tracker.csv
notebooks/: 01_prototype_curves.ipynb  02_fit_curves.ipynb  03_dragut_offline.ipynb  03_dragut_validate.ipynb  04_sim_demo.ipynb  05_fit_stiennon.ipynb
paper/: .latexmkrc  main2.aux  main2.bbl  main2.blg  main2.fdb_latexmk  main2.fls  main2.out  main2.tex  references.bib
report/: main.tex
scripts/: fit_curve.py  gen_generic_curve.py  make_heatmap.py  make_plots.py  make_scenarioA.py  migrate_curve_keys.py  refit_curve.py  sim.py  validate_cli.py  validate_dragut.py
src/: curves.py  optimizer.py  types.py  utils.py
src/api/: k_resource.py
src/cucal/: __main__.py  config.py  cost_utils.py  curves.py  hardware.py  model_types.py  optimizer.py  utils.py  validate.py
src/resources/: hardware.json
tests/: conftest.py  pytest.ini  test_curves.py  test_curves_schema.py  test_energy.py  test_k_resource_optimizer.py  test_opimizer_time.py  test_optimizer.py  test_time_budget.py  test_validation_dragut.py
(+3 files in other folders)
