[project]
name = "cost-utility-calculator"
version = "0.4.0"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]                       # <<< fix starts here
package-dir = {"" = "src"}              # look for packages under src/
packages = ["cucal", "api"]             # list the real package names
# -- OR, if you prefer automatic discovery --
# [tool.setuptools.packages.find]
# where = ["src"]
